Add styles for markdown

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -115,7 +115,8 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
   --success: #22c55e;
-  --code-background: #1f2937;
+  --code-background: #262626;
+  /* #1f2937; */
 }
 
 @layer base {
