--- a/frontend/src/app/questions/[id]/page.module.scss
+++ b/frontend/src/app/questions/[id]/page.module.scss
@@ -1,14 +1,29 @@
 .markdown {
-    code {
+    pre {
         display: block;
         background-color: var(--code-background);
-        padding: .5rem;
+        padding: 1rem;
         border-radius: .4rem;
         margin: .5rem 0;
         overflow-x: auto;
     }
 
+    pre code {
+        padding: 0;
+    }
+
+    code {
+        background-color: var(--code-background);
+        padding: .2rem .4rem;
+        border-radius: .4rem;
+    }
+
     p {
         margin: 1rem 0;
+    }
+
+    ul, ol {
+        list-style-type: disc;
+        margin-left: 1.5rem;
     }
 }
