--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -80,6 +80,7 @@
   --sidebar-ring: oklch(0.708 0 0);
   --success: #16a34a;
   --code-background: #eeeeee;
+  --link-color: #1e40af;
 }
 
 .dark {
@@ -116,6 +117,7 @@
   --sidebar-ring: oklch(0.556 0 0);
   --success: #22c55e;
   --code-background: #262626;
+  --link-color: #60a5fa;
   /* #1f2937; */
 }
 
