--- a/frontend/src/components/ui/styled-markdown/styled-markdown.module.scss
+++ b/frontend/src/components/ui/styled-markdown/styled-markdown.module.scss
@@ -35,4 +35,9 @@
             text-decoration: underline;
         }
     }
+
+    img {
+        margin: 1rem 0;
+        border-radius: .4rem;
+    }
 }
